<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/popupCerrarSesion"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/popupTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirmar_cierre_de_sesion"
            android:fontFamily="@font/verdana"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/tvCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupCerrarSesionSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@color/transparente"
                android:textColor="@color/primaryColor"
                android:text="@string/salir"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupCerrarSesionCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@color/transparente"
                android:textColor="@color/primaryColor"
                android:text="@string/cancelar"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>