<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/popupLectura"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/popupTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registrar_lectura_nueva"
            android:fontFamily="@font/verdana"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/tvCuerpo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLectura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lectura_nueva"
            android:fontFamily="@font/verdana"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="5"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/llError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_alert_error"
                android:layout_gravity="center"
                tools:ignore="ContentDescription"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/rojoAlert"
                android:textSize="14sp"
                android:gravity="center"
                android:visibility="visible"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_transparente"
                android:textColor="@color/primaryDarkColor"
                android:text="@string/cancelar"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupSi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_transparente"
                android:textColor="@color/primaryDarkColor"
                android:text="@string/confirmar"
                android:layout_weight="1"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>